Fix stylesheet link and clean up HTML structure
Updated stylesheet link and ensured HTML structure is consistent.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Engineering Design</title>
-  <link  rel="stylesheet" type="text/css" href="1601.css">
+  <link  rel="stylesheet" type="text/css" href="index.css">
  
 </head>
 
@@ -98,3 +98,4 @@ Get Started
 
 </body>
 </html>
+
