Change button link in hero section
Updated the button link in the hero section from 'calculatorlist1601.html' to 'login.html'.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Fast, Accurate & Reliable Calculations.
 </p>
 
   
-  <button onclick="location.href='calculatorlist1601.html'">
+ <button onclick="location.href='login.html'">
 Get Started
 </button>
 
@@ -98,3 +98,4 @@ Get Started
 
 </body>
 </html>
+
