Update EOTS link in calculatorlist1601.html

--- a/calculatorlist1601.html
+++ b/calculatorlist1601.html
@@ -27,7 +27,7 @@
     <h3>EOT Crane STRUCTURAL DESIGN</h3>
     <p>Dead Load,Impact Load , Girder Section,Stress,etc</p>
 
-    <button onclick="location.href='EOTS.html'">
+    <button onclick="location.href='EOTS1.html'">
       Open
     </button>
 
@@ -37,5 +37,6 @@
 </body>
 
 </html>
+
 
 
