--- a/about1601.html
+++ b/about1601.html
@@ -1,22 +1,61 @@
+<!DOCTYPE html>
 <html>
 <head> 
-       <link rel="stylesheet" type="text/css" href="index.css">
+    <title>About - Engineering Design Calculator</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
+
 <body class="aboutpage">
+
 <div class="about">
-<p>
-This platform is developed for engineers, students
-and professionals who need fast and reliable
-design calculations.
-</p>
 
-<p>
-All calculators are created using standard
-engineering formulas and practical experience.
-</p>
+    <h1>About Engineering Design Calculator</h1>
 
-<p>
-Our aim is to save time and improve design accuracy.
-</p>
+    <p>
+        Engineering Design Calculator is a practical online platform 
+        developed for engineers, students, 
+        and industry professionals who require fast, accurate and 
+        reliable engineering calculations.
+    </p>
+
+    <p>
+        This platform provides multiple design calculation tools 
+        used in mechanical and structural engineering such as:
+    </p>
+
+    <ul>
+        <li>Beam & Girder Design Calculations</li>
+        <li>Load & Stress Analysis</li>
+        <li>Motor & RPM Calculations</li>
+        <li>Pulley & Sheave Selection</li>
+        <li>Shaft Design Calculations</li>
+        <li>EOT Crane Design Calculations</li>
+    </ul>
+
+    <p>
+        All calculators are developed using standard engineering formulas, 
+        design principles and practical industrial experience to ensure 
+        accurate and dependable results.
+    </p>
+
+    <p>
+        Our mission is to simplify complex design calculations, 
+        save valuable engineering time, and improve design accuracy 
+        for real-world applications.
+    </p>
+
+    <p>
+        This platform will continuously be updated with more advanced 
+        calculators and design tools to support modern engineering needs.
+    </p>
+
+    <h3>Developed By:</h3>
+    <p>
+        Mahendra Kumar <br>
+    
+    </p>
+
+</div>
+
 </body>
 </html>
