--- a/home1601.html
+++ b/home1601.html
@@ -3,58 +3,64 @@
       <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body class="home">
-<!-- HERO -->
 
-<h2>Engineering Design & Calculation Tools</h2>
-
-<p>
-Fast, accurate and reliable calculators for
-mechanical and structural engineers.
-</p>
-
-<p>
-Based on ISO and ASME standards.
-</p>
+<section class="home-hero">
+    <div class="hero-content">
+        <h1>Engineering Design Calculator</h1>
+        <p>
+            Professional mechanical & structural calculation tools 
+            designed for engineers and industry use.
+        </p>
+    </div>
+</section>
 
 
+<section class="home-tools">
+    <h2>Engineering Modules</h2>
+
+    <div class="tools-grid">
+
+        <div class="tool-box">
+            <h3>EOT Crane – Mechanical</h3>
+            <p>Motor Power, Brake Torque, Rope Drum, Shaft Design</p>
+        </div>
+
+        <div class="tool-box">
+            <h3>EOT Crane – Structural</h3>
+            <p>Dead Load, Impact Load, Girder Selection, Stress Check</p>
+        </div>
+
+        <div class="tool-box">
+            <h3>Wire Rope Design</h3>
+            <p>Safe Working Load & Safety Factor Calculation</p>
+        </div>
+
+    </div>
+</section>
 
 
-<!-- TOOLS -->
-<h2>Available Calculators</h2>
+<section class="home-info">
+    <div class="info-left">
+        <h2>Why This Platform?</h2>
+        <ul>
+            <li>✔ ISO & ASME Based Calculations</li>
+            <li>✔ Industry Practical Formula Logic</li>
+            <li>✔ Fast & Accurate Output</li>
+            <li>✔ Designed for Real Projects</li>
+        </ul>
+    </div>
 
-<div class="box">
-  <h3>Shaft Design</h3>
-  <p>Safe shaft diameter calculation</p>
-</div>
+    <div class="info-right">
+        <h2>Future Expansion</h2>
+        <p>
+            More advanced modules like Shaft Design, 
+            Gear Design, Foundation Load Calculation 
+            and Structural Analysis tools will be added.
+        </p>
+    </div>
+</section>
 
-<div class="box">
-  <h3>Beam Design</h3>
-  <p>Bending and deflection analysis</p>
-</div>
-
-<div class="box">
-  <h3>Wire Rope</h3>
-  <p>Safe working load calculation</p>
-</div>
-
-
-<!-- BENEFITS -->
-<h2>Why Choose Us</h2>
-
-<ul>
-  <li>✔ Accurate Results</li>
-  <li>✔ Easy Interface</li>
-  <li>✔ Professional Design</li>
-  <li>✔ Time Saving</li>
-</ul>
-
-
-<!-- CTA -->
-<h2>Start Your Design Today</h2>
-
-<p>
-Design with confidence using our tools.
-</p>
 </body>
 </html>
+
 
