--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
 <body>
 
 <!-- Header -->
-<header>
-  <h1>Engineering Design</h1>
+<header class="main-header">
 
-  <nav>
-    <a href="home1601.html">Home</a>
+  <div class="logo">
+    Engineering Design
+  </div>
+
+  <nav class="navbar">
+    <a href="index.html" class="active">Home</a>
+    <a href="home1601.html">Modules</a>
     <a href="about1601.html">About</a>
     <a href="services1601.html">Services</a>
-    <a href="#">Contact</a>
+    <a href="contact1601.html">Contact</a>
   </nav>
+
 </header>
 
 <!-- Hero Section -->
