--- a/home1601.html
+++ b/home1601.html
@@ -4,6 +4,26 @@
 </head>
 <body class="home">
 
+<!-- ===== HEADER START ===== -->
+
+<header class="main-header">
+
+  <div class="logo">
+    Engineering Design
+  </div>
+
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="home1601.html" class="active">Modules</a>
+    <a href="about1601.html">About</a>
+    <a href="services1601.html">Services</a>
+    <a href="contact1601.html">Contact</a>
+  </nav>
+
+</header>
+
+<!-- ===== HEADER END ===== -->
+
 <section class="home-hero">
     <div class="hero-content">
         <h1>Engineering Design Calculator</h1>
@@ -62,5 +82,6 @@
 
 </body>
 </html>
+
 
 
