--- a/services1601.html
+++ b/services1601.html
@@ -4,8 +4,29 @@
 </head>
 <body class="service">
 
-<h2>Our Services</h2>
+<!-- ===== HEADER START ===== -->
 
+<header class="main-header">
+
+  <div class="logo">
+    Engineering Design
+  </div>
+
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="home1601.html" class="active">Modules</a>
+    <a href="about1601.html">About</a>
+    <a href="services1601.html">Services</a>
+    <a href="contact1601.html">Contact</a>
+  </nav>
+
+</header>
+
+<!-- ===== HEADER END ===== -->
+
+      
+<h2>Our Services</h2>
+      
 <div class="box">
 
 <h3>Engineering Design Calculations</h3>
@@ -56,4 +77,5 @@ cloud-based calculations.
 
 </div>
 </body>
+
 </html>
