Add header and navigation to calculator list page

--- a/calculatorlist1601.html
+++ b/calculatorlist1601.html
@@ -4,6 +4,28 @@
       <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body class="getstarted">
+
+ <!-- ===== HEADER START ===== -->
+
+<header class="main-header">
+
+  <div class="logo">
+    Engineering Design
+  </div>
+
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="home1601.html" class="active">Modules</a>
+    <a href="about1601.html">About</a>
+    <a href="services1601.html">Services</a>
+    <a href="contact1601.html">Contact</a>
+  </nav>
+
+</header>
+
+<!-- ===== HEADER END ===== -->     
+      
+      
 <h1>Available Calculators</h1>
 
 <div class="tools">
@@ -37,6 +59,7 @@
 </body>
 
 </html>
+
 
 
 
