Add header section to about1601.html

--- a/about1601.html
+++ b/about1601.html
@@ -7,6 +7,26 @@
 
 <body class="aboutpage">
 
+<!-- ===== HEADER START ===== -->
+
+<header class="main-header">
+
+  <div class="logo">
+    Engineering Design
+  </div>
+
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="home1601.html" class="active">Modules</a>
+    <a href="about1601.html">About</a>
+    <a href="services1601.html">Services</a>
+    <a href="contact1601.html">Contact</a>
+  </nav>
+
+</header>
+
+<!-- ===== HEADER END ===== -->
+
 <div class="about">
 
     <h1>About Engineering Design Calculator</h1>
@@ -59,3 +79,4 @@
 
 </body>
 </html>
+
