--- a/EOTS1.html.html
+++ b/EOTS1.html.html
@@ -386,6 +386,25 @@ body {
 </head>
 <body>
 
+<!-- ===== HEADER START ===== -->
+
+<header class="main-header">
+
+  <div class="logo">
+    Engineering Design
+  </div>
+
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="home1601.html" class="active">Modules</a>
+    <a href="about1601.html">About</a>
+    <a href="services1601.html">Services</a>
+    <a href="contact1601.html">Contact</a>
+  </nav>
+
+</header>
+
+<!-- ===== HEADER END ===== -->
   
 <div class="project-card">
   <div class="project-title">📁 Project</div>
@@ -3941,3 +3960,4 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
