--- a/calculatorlist1601.html
+++ b/calculatorlist1601.html
@@ -49,7 +49,7 @@
     <h3>EOT Crane STRUCTURAL DESIGN</h3>
     <p>Dead Load,Impact Load , Girder Section,Stress,etc</p>
 
-    <button onclick="location.href='EOTS1.html'">
+    <button onclick="location.href='EOTS1.html.html'">
       Open
     </button>
 
@@ -59,6 +59,7 @@
 </body>
 
 </html>
+
 
 
 
