--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <!-- Header -->
-<header class="main-header" bg-color="#AFEEEE">
+<header class="main-header" style="background-color:#AFEEEE;">
 
   <div class="logo">
     Engineering Design
